--- a/Module4HW3/Module4HW3.csproj
+++ b/Module4HW3/Module4HW3.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Entities\ProjectConfiguration.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.13" />
 	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
